2004-06-06  Philippe Gerum  <rpm@xenomai.org>

	* Move to GNA (http://www.gna.org/projects/rtai/).

2004-06-06  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/system.h: New wrapper file for user-space
	inclusion. Wraps to the nucleus/asm-uvm/ pseudo-architecture when
	compiling the user-space VMs.

	* include/nucleus/vm: Replaced and refactored by nucleus/asm-uvm/.

2004-06-05  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/hal.h,
	sim/include/nucleus/asm/system/h,
	include/nucleus/vm/nucleus/asm/system.h: Add ffnz().

2004-06-04  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_calibrate_sched): Make extern.

2004-06-04  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* fusion: SMP port.
	
2004-06-04  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/mutex.c: Remove mutex support which proved to raise
	performances issues, especially in SMP mode.

	* nucleus/pod.c (xnpod_init_thread, xnpod_start_thread): Kill
	arch-dependent cookie.

	* include/nucleus/asm-i386/hal.h: Cleanup a few obsolete macros.

	* nucleus/shadow.c: Discard autoswitch mode to RTAI upon return
	from Linux; it proved useless by design. Additionally, this
	removes the need for intercepting the syscall exit event.

2004-06-02  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/syscall.c: Wrap semaphore services.

2004-06-01  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c: Add autocalibration code for scheduling and timer
	latencies.

	* fusion: Replace Xenomai-defined errcodes by standard POSIX ones.

	* nucleus/pod.c (xnpod_start_timer): Make sure the user cannot
	specify a host tick shorter than the timer precision.

2004-05-31  Philippe Gerum  <rpm@xenomai.org>

	* skins/uitron, skins/vrtx: Use interrupt masking instead of
	an interface mutex.

	* nucleus/timer.c (xntimer_do_timers): Postpone the propagation of
	the host tick to the interrupt epilogue (xnintr_irq_handler()).

2004-05-29  Philippe Gerum  <rpm@xenomai.org>
